<resources>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="sinIniciar">Usar en local</string>
    <string name="sesionIni">Guardar sesión</string>
    <string name="idioma">Idioma</string>
    <string name="guardar">Guardar</string>
    <string name="histEntrena">Historial de Entrenamientos</string>
    <string name="app_name" translatable="false">Garatu</string>
    <string name="general">General</string>
    <string name="privacidad">Privacidad</string>
    <string name="uniMetri">Unidades Metricas</string>
    <string name="notifi">Notificaciones</string>
    <string name="avisoPriva">Aviso de Privacidad</string>
    <string name="permiso">Permisos</string>
    <string name="borrarDatos">Borrar Datos</string>
    <string name="correr">Correr</string>
    <string name="bici">Bicicleta</string>
    <string name="andar">Caminata</string>
    <string name="remo">Remo</string>
    <string name="actividad_desconocida">Desconocido</string>
    <string name="confirmar_eliminacion">Confirmar eliminación</string>
    <string name="deseas_borrar_entrenamiento">¿Estás seguro de que quieres borrar todos los datos locales?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="regPesas">Registro de Pesas</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="ajustes">Ajustes</string>
    <string name="salir">Salir</string>
    <string name="ergo" translatable="false">Ergometro</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="inicio">Inicio</string>
    <string name="duracion">Duración</string>
    <string name="distancia">Distancia</string>
    <string name="velocidad">Velocidad</string>
    <string name="ritmo">Ritmo</string>
    <string name="que_quieres_hacer">¿Que deseas hacer?</string>
    <string name="guardar_salir">Guardar y Salir</string>
    <string name="cancelar">Cancelar</string>
    <string name="no_disponible">No está disponible</string>
    <string name="entrena_guardado_finalizado">Entrenamiento finalizado y guardado</string>
    <string name="formato_incorrecto_tiempo">Formato de tiempo incorrecto. Usa hh:mm:ss</string>
    <string name="error_guardar">Error al guardarlo</string>
    <string name="idioma_actualizado">El idioma se ha actualizado</string>
    <string name="idioma_no_actualizado">No hay ningún idioma seleccionado</string>
    <string name="tipo_entrena">Selecciona el tipo de entrenamiento</string>
    <string name="comenzar">Comenzar</string>
    <string name="no_entrena">No hay ningún entrenamiento</string>
    <string name="detall_entrena">Detalles del Entrenamiento</string>
    <string name="fechaEntreno">Fecha del entreno</string>
    <string name="paladas">Paladas</string>
    <string name="valoracion">Valoración</string>
    <string name="añadirFila">Añadir Fila</string>
    <string name="comentarios">Comentarios</string>
    <string name="comenText">Escriba sus comentarios aquí</string>
    <string name="nPaladas">Número de paladas</string>
    <string name="dinstvalor">Ingrese la distancia</string>
    <string name="fechaValor">Introduzca la fecha</string>
    <string name="map">Mapa</string>
    <string name="vueltas">Vueltas</string>
    <string name="borrarEntrena">Borrar entrenamiento</string>
    <string name="editarEntrena">Editar Entrenamiento</string>
    <string name="repeticion">Repeticiones</string>
    <string name="todasPesas">Todas las Pesas</string>
    <string name="mejoresPesas">Mejores Pesas</string>
    <string name="ejercicios">%d ejercicios</string>
    <string name="maxPeso">Max. Peso</string>
    <string name="selectEntrena">Seleccionar Entrenamiento</string>
    <string name="orden">Orden</string>
    <string name="peso">Peso</string>
    <string name="registar" translatable="false">Registrar</string>
    <string name="profile_image">Imagen de perfil</string>
    <string name="username">Nombre de usuario</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="email">Correo electronico</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="take_photo" translatable="false">Tomar una foto</string>
    <string name="choose_from_gallery" translatable="false">Galeria</string>
    <string name="configurar_alarma" translatable="false">Configurar recordatorio</string>
    <string name="alarma_configurada" translatable="false">Alarma: %02d:%02d</string>
    <string name="alarma_programada" translatable="false">Alarma programada a las %02d:%02d</string>
    <string name="recordatorio_entrenamiento" translatable="false">¡Hora de entrenar!</string>
    <string name="es_hora_de_entrenar" translatable="false">Es hora de tu sesión de entrenamiento diaria</string>
    <string name="recordatorios_entrenamiento" translatable="false">Recordatorios de entrenamiento</string>
    <string name="canal_recordatorios" translatable="false">Notificaciones para recordatorios de entrenamiento</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

</resources>